# PPSI-imp

./: .gitignore  CMakeLists.txt  Requirement_OT.md  readme.md
PIRANA/: CMakeLists.txt  note.md  quick_test.sh
PIRANA/src/: batch_pir.cc  client.cc  client.h  hmain.h  main.cc  pir_parms.cc  pir_parms.h  server.cc  server.h  test.cc  test.h
cuckoo_hash/: CMakeLists.txt  Makefile  README.md  cuckoo_hash.h  run_build.sh  test_cuckoo_hash.cpp
protocol_v2/: CMakeLists.txt  batch_test.sh  make&run.sh  readme.md  repeat_test.sh  run_test.sh  test_batch_general.sh  test_data_creator.py  test_pure_psi.sh  test_vary_inter.sh
protocol_v2/data/: check.txt  gen_data.py  input_data_main_cuckoo.txt  kv_2_16.txt  test_data_creator.py
protocol_v2/include/: common.h  config.h  debug_oprf.h  network.h  oos_ot.h  receiver.h  sender.h  simulator.h
protocol_v2/result/: PPSI不同规模测试性能汇总.csv  benchmark_2_20.csv  benchmark_summary.csv  benchmark_summary_backup.csv  compare_fig.py  fig.py  manual_log.txt  overall_summary.csv  s_4096_r_1024_result_direct.txt  s_4096_r_512_result_direct.txt  scheme_compare_communication.csv  scheme_compare_offline.csv  scheme_compare_online.csv
protocol_v2/result/compare/: APSI_Performance.csv  Ourscheme_Performance.csv  batch_test_20260115_162329.csv  online_compare_fig.py  plot_comparison.py  scheme_compare_online.csv
protocol_v2/result/micro/: micro_time_fig.py  online_statistic_summary.csv
protocol_v2/result/psi/: pure_psi_20260115_160303.csv  pure_psi_20260115_161623.csv
protocol_v2/result/vary_inter/: vary_inter_20260113_170710.csv  vary_inter_20260113_171444.csv  vary_inter_20260113_173120.csv  vary_inter_20260114_101735.csv  vary_inter_20260114_115334.csv  vary_inter_fig.py  vary_inter_summary.csv
protocol_v2/src/: config.cpp  main.cpp  oos_ot.cpp  receiver.cpp  sender.cpp
test_PIR/: CMakeLists.txt  repeat_test.sh  run.sh  test.cpp
test_oosOT/: CMakeLists.txt  compile_k_out_of_n.sh  run_OT_test.sh  run_k_out_of_n_test.sh  test_k_out_of_n_OT  test_k_out_of_n_OT.cpp  test_k_out_of_n_OT.h
test_oosOT/include/: OT.h  receiver.h  sender.h  utils.h
test_oosOT/src/: OT.cpp  main.cpp  receiver.cpp  sender.cpp  utils.cpp
